--- a/store/sqlc.yaml
+++ b/store/sqlc.yaml
@@ -7,3 +7,5 @@ sql:
       go:
         package: "queries"
         out: "queries"
+        emit_enum_valid_method: true
+        emit_all_enum_values: true
