--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,6 +7,8 @@ sql:
     go:
       package: "imsdb"
       out: "store/imsdb"
+      emit_enum_valid_method: true
+      emit_all_enum_values: true
 - engine: "mysql"
   queries: "directory/queries.sql"
   schema: "directory/schema.sql"
