--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,6 +9,7 @@ sql:
       out: "store/imsdb"
       emit_enum_valid_method: true
       emit_all_enum_values: true
+      emit_interface: true
 - engine: "mysql"
   queries: "directory/queries.sql"
   schema: "directory/schema.sql"
